# llvm-gpu-pass

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  build_and_test.ps1  test_sample.c
lib/Transforms/: CMakeLists.txt
lib/Transforms/GPUOptimizer/: CMakeLists.txt  GPUCodeGen.cpp  GPUCodeGen.h  GPUComplexPatternHandler.cpp  GPUComplexPatternHandler.h  GPUHeterogeneousSupport.cpp  GPUHeterogeneousSupport.h  GPUKernelExtractor.cpp  GPUKernelExtractor.h  GPULoopTransformer.cpp  GPULoopTransformer.h  GPUOptimizerPass.cpp  GPUParallelizer.cpp  GPUPassIntegration.cpp  GPUPassIntegration.h  GPUPatternAnalyzer.cpp  GPUPatternAnalyzer.h  GPUSyncPrimitives.cpp  GPUSyncPrimitives.h
test_samples/: complex_patterns.c  comprehensive_test.c
